fix: metadata for documentation pages

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/en.mdx
@@ -4,9 +4,14 @@ Integration plugin for data exchange between Medusa and 1C:Enterprise ERP.
 
 > 🚧 Integration is currently under development, see the [Roadmap](#roadmap).
 
+export const metadata = {
+	title: "1C:Enterprise Integration with Medusa",
+	description: "Integration plugin for data exchange between Medusa and 1C:Enterprise ERP."
+}
+
 ## 💬 1C:Enterprise Plugin Support Chat
 
-Got questions or ideas for new plugin features?  
+Got questions or ideas for new plugin features?
 Join the Telegram chat – [@medusajs_1c](https://t.me/medusajs_1c)
 
 ## 👥 Medusa.js Community Chat
