--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/ru.mdx
@@ -2,10 +2,15 @@
 
 В этой документации вы узнаете, как установить и настроить плагин интеграции 1C:Enterprise для Medusa.
 
+export const metadata = {
+	title: "Быстрый старт с интеграцией 1С:Предприятие",
+	description: "В этой документации вы узнаете, как установить и настроить плагин интеграции 1C:Enterprise для Medusa."
+}
+
 ## Требования
 
-- Medusa v2.7.0 или новее  
-- Node.js v20 или новее  
+- Medusa v2.7.0 или новее
+- Node.js v20 или новее
 
 ## Installation
 
