--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/ru.mdx
@@ -4,9 +4,14 @@
 
 > 🚧 Интеграция в настоящее время находится в разработке, см. [Roadmap](#roadmap).
 
+export const metadata = {
+	title: "Интеграция 1С:Предприятие с Medusa",
+	description: "Плагин интеграции для обмена данными между Medusa и ERP 1С:Предприятие"
+}
+
 ## 💬 Чат поддержки плагина 1С:Предприятие
 
-Есть вопросы или идеи по новым функциям плагина?  
+Есть вопросы или идеи по новым функциям плагина?
 Присоединяйтесь к чату в Telegram – [@medusajs_1c](https://t.me/medusajs_1c)
 
 ## 👥 Чат сообщества Medusa.js
