--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/en.mdx
@@ -2,6 +2,11 @@
 
 A Medusa plugin that provides Robokassa payments.
 
+export const metadata = {
+	title: "Robokassa Payments for Medusa",
+	description: "A Medusa plugin that provides Robokassa payments."
+}
+
 ## Features
 
 - 🔗  **Seamless integration** with the Robokassa payment system
