--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/en.mdx
@@ -2,6 +2,12 @@
 
 A Medusa plugin that provides T-Kassa payments.
 
+export const metadata = {
+  title: "T-Kassa Payments for Medusa",
+  description: "A Medusa plugin that provides T-Kassa payments"
+}
+
+
 ## Features
 
 - 🔗  **Seamless integration** with the T-Kassa payment system
