--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/en.mdx
@@ -2,6 +2,12 @@
 
 In this document, you’ll learn how to install and configure the T-Kassa payment provider for Medusa.
 
+export const metadata = {
+  title: "Getting Started with T-Kassa Payment",
+  description: "In this document, you’ll learn how to install and configure the T-Kassa payment provider for Medusa"
+}
+
+
 ## Requirements
 
 - Medusa v2.7.0 or later
