--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/ru.mdx
@@ -2,6 +2,12 @@
 
 В этом документе вы узнаете, как установить и настроить платежный провайдер Т-Касса для Medusa.
 
+export const metadata = {
+  title: "Быстрый старт с подключением Т-Касса",
+  description: "В этом документе вы узнаете, как установить и настроить платежный провайдер Т-Касса для Medusa"
+}
+
+
 ## Требования
 
 - Medusa v2.7.0 или новее  
