--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/ru.mdx
@@ -2,6 +2,12 @@
 
 Для запуска тестов перейдите в каталог [`examples/feed-yandex/medusa`](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex/medusa):
 
+export const metadata = {
+  title: "Тестирование",
+  description: "Для запуска тестов перейдите в каталог [`examples/feed-yandex/medusa`](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex/medusa):"
+}
+
+
 ```bash
 cd examples/feed-yandex/medusa
 ```
