--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/en.mdx
@@ -2,6 +2,12 @@
 
 Open the Medusa Admin dashboard and navigate to **Settings** -> **Feeds** section in the Extensions — this is where the plugin interface is available.
 
+export const metadata = {
+  title: "Usage",
+  description: "Open the Medusa Admin dashboard and navigate to **Settings** -> **Feeds** section in the Extensions — this is where the plugin interface is available"
+}
+
+
 ![Feeds list page](https://github.com/user-attachments/assets/7998358a-a0ed-4f46-8927-0db3189aea31)
 
 The page displays all existing feeds with their key information.
