--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
@@ -2,6 +2,12 @@
 
 A Medusa plugin that provides YooKassa payments.
 
+export const metadata = {
+  title: "YooKassa Payments for Medusa",
+  description: "A Medusa plugin that provides YooKassa payments"
+}
+
+
 ## Features
 
 - 🔗  **Seamless integration** with the YooKassa payment system
