--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
@@ -2,6 +2,12 @@
 
 Плагин Medusa для приёма платежей через ЮKassa.
 
+export const metadata = {
+  title: "Платежи ЮKassa для Medusa",
+  description: "Плагин Medusa для приёма платежей через ЮKassa"
+}
+
+
 ## Возможности
 
 - 🔗  **Бесшовная интеграция** с платёжной системой ЮKassa
