--- a/www/docs/src/app/[locale]/(docs)/tools/create-medusa-plugin/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/tools/create-medusa-plugin/en.mdx
@@ -2,6 +2,12 @@
 
 A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure.
 
+export const metadata = {
+  title: "create-medusa-plugin",
+  description: "A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure"
+}
+
+
 ## Usage
 
 `create-medusa-plugin` uses the official [`create-medusa-app`](https://docs.medusajs.com/resources/create-medusa-app) under the hood to scaffold Medusa projects—including the plugin, backend and storefront folders. This ensures your setup follows official best practices and remains fully compatible with the Medusa ecosystem by leveraging the official Medusa app generator.
