--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/en.mdx
@@ -2,6 +2,11 @@
 
 In this document, you'll learn how to install and configure the 1C:Enterprise integration plugin for Medusa.
 
+export const metadata = {
+	title: "Getting Started with 1C:Enterprise ERP",
+	description: "In this document, you'll learn how to install and configure the 1C:Enterprise integration plugin for Medusa."
+}
+
 ## Prerequisites
 
 - Medusa server v2.8.0 or later
