--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/ru.mdx
@@ -2,6 +2,11 @@
 
 Плагин Medusa для приёма платежей через Робокасса.
 
+export const metadata = {
+	title: "Платежи Робокасса для Medusa",
+	description: "Плагин Medusa для приёма платежей через Робокасса."
+}
+
 ## Возможности
 
 - 🔗  **Бесшовная интеграция** с платежной системой Робокасса
