--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/ru.mdx
@@ -2,6 +2,12 @@
 
 Плагин Medusa для приёма платежей через Т-Касса.
 
+export const metadata = {
+  title: "Платежи Т-Касса для Medusa",
+  description: "Плагин Medusa для приёма платежей через Т-Касса"
+}
+
+
 ## Возможности
 
 - 🔗  **Бесшовная интеграция** с платёжной системой YooKassa
