--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/en.mdx
@@ -1,4 +1,9 @@
-# Yandex Market YML Feed Generator for Medusa
+export const metadata = {
+	title: "Yandex Market YML Feed Generator for Medusa",
+	description: "A Medusa plugin that generates a product feed in YML (Yandex Market Language) format"
+}
+
+# {metadata.title}
 
 A Medusa plugin that generates a product feed in <a href="https://yandex.com/support/direct/feeds/requirements-yml.html">YML (Yandex Market Language)</a> format.
 
@@ -14,7 +19,7 @@ A Medusa plugin that generates a product feed in <a href="https://yandex.com/sup
 
 ## 💬 Yandex Plugin Support Chat
 
-Got questions or ideas for new plugin features?  
+Got questions or ideas for new plugin features?
 Join the Telegram chat – [@medusajs_yandex](https://t.me/medusajs_yandex)
 
 ## 👥 Medusa.js Community Chat
@@ -32,4 +37,3 @@ For information on managing feeds through the Medusa Admin panel, see the [Admin
 ## Development
 
 Find documentation on bootstrapping a development environment [here](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex).
-
