--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/en.mdx
@@ -2,6 +2,12 @@
 
 In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa.
 
+export const metadata = {
+  title: "Getting Started with Yandex YML Feed Generator",
+  description: "In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa"
+}
+
+
 ## Prerequisites
 
 - Medusa server v2.8.0 or later
