--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/ru.mdx
@@ -1,4 +1,9 @@
-# Генератор YML-фида в формате Яндекс Маркет для Medusa
+export const metadata = {
+	title: "Генератор YML-фида в формате Яндекс Маркет для Medusa",
+	description: "Плагин Medusa, который генерирует фид товаров в формате YML (Yandex Market Language)"
+}
+
+# {metadata.title}
 
 Плагин Medusa, который генерирует фид товаров в формате <a href="https://yandex.com/support/direct/feeds/requirements-yml.html">YML (Yandex Market Language)</a>.
 
@@ -14,7 +19,7 @@
 
 ## 💬 Чат поддержки плагина Yandex
 
-Есть вопросы или идеи для новых функций плагина?  
+Есть вопросы или идеи для новых функций плагина?
 Присоединяйтесь к чату в Telegram – [@medusajs_yandex](https://t.me/medusajs_yandex)
 
 ## 👥 Чат сообщества Medusa.js
