--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/en.mdx
@@ -2,6 +2,12 @@
 
 To run tests, navigate to the [`examples/feed-yandex/medusa`](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex/medusa) directory:
 
+export const metadata = {
+  title: "Testing Yandex Market YML Feed Generator",
+  description: "To run tests, navigate to the [`examples/feed-yandex/medusa`](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex/medusa) directory:"
+}
+
+
 ```bash
 cd examples/feed-yandex/medusa
 ```
