feat(docs): fix metadata

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/ru.mdx
@@ -1,11 +1,11 @@
+export const metadata = {
+	title: "Быстрый старт с интеграцией 1С:Предприятие",
+	description: "В этой документации вы узнаете, как установить и настроить плагин интеграции 1С:Предприятие для Medusa."
+}
+
 # Быстрый старт с интеграцией 1С:Предприятие
 
 В этой документации вы узнаете, как установить и настроить плагин интеграции 1C:Enterprise для Medusa.
-
-export const metadata = {
-	title: "Быстрый старт с интеграцией 1С:Предприятие",
-	description: "В этой документации вы узнаете, как установить и настроить плагин интеграции 1C:Enterprise для Medusa."
-}
 
 ## Требования
 
