--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/ru.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Интеграция Робокасса с витриной магазина (Storefront)",
+  description: "Узнайте, как интегрировать платёжный провайдер Робокасса в витрину магазина на Next.js для Medusa."
+}
+
 # Интеграция Робокасса с витриной магазина (Storefront)
 
 Для интеграции платёжного провайдера Робокасса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
-
-export const metadata = {
-  title: "Интеграция Робокасса с витриной магазина (Storefront)",
-  description: "Для интеграции платёжного провайдера Робокасса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты"
-}
-
 
 Когда пользователь выбирает Робокасса, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API Робокасса и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты Робокасса, где он сможет выбрать предпочтительный способ оплаты.
 
