--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/storefront-integration/ru.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Интеграция Т-Касса с витриной магазина (Storefront)",
+  description: "Узнайте, как интегрировать платёжный провайдер Т-Касса в витрину магазина на Next.js для Medusa."
+}
+
 # Интеграция Т-Касса с витриной магазина (Storefront)
 
 Для интеграции платёжного провайдера Т-Касса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
-
-export const metadata = {
-  title: "Интеграция Т-Касса с витриной магазина (Storefront)",
-  description: "Для интеграции платёжного провайдера Т-Касса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты"
-}
-
 
 Когда пользователь выбирает Т-Касса, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API Т-Касса и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты Т-Касса, где он сможет выбрать предпочтительный способ оплаты.
 
