--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/ru.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Начало работы с генератором YML-фидов Яндекса",
+  description: "В этой документации вы узнаете, как установить и настроить генератор YML-фидов в формате Яндекс Маркета для Medusa."
+}
+
 # Начало работы с генератором YML-фидов Яндекса
 
 В этой документации вы узнаете, как установить и настроить генератор YML-фидов в формате Яндекс Маркета для Medusa.
-
-export const metadata = {
-  title: "Начало работы с генератором YML-фидов Яндекса",
-  description: "В этой документации вы узнаете, как установить и настроить генератор YML-фидов в формате Яндекс Маркета для Medusa"
-}
-
 
 ## Требования
 
