--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/ru.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
 	title: "Генератор YML-фида в формате Яндекс Маркет для Medusa",
-	description: "Плагин Medusa, который генерирует фид товаров в формате YML (Yandex Market Language)"
+	description: "Плагин Medusa, который генерирует фид товаров в формате YML (Yandex Market Language)."
 }
 
 # {metadata.title}
