--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/en.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Usage",
+  description: "Use the Medusa Admin dashboard to manage Yandex Market YML feeds"
+}
+
 # Usage
 
 Open the Medusa Admin dashboard and navigate to **Settings** -> **Feeds** section in the Extensions — this is where the plugin interface is available.
-
-export const metadata = {
-  title: "Usage",
-  description: "Open the Medusa Admin dashboard and navigate to **Settings** -> **Feeds** section in the Extensions — this is where the plugin interface is available"
-}
-
 
 ![Feeds list page](https://github.com/user-attachments/assets/7998358a-a0ed-4f46-8927-0db3189aea31)
 
