--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/ru.mdx
@@ -1,13 +1,11 @@
+export const metadata = {
+  title: "Использование",
+  description: "Используйте панель администратора Medusa для управления Yandex Market YML-фидами"
+}
 
 # Использование
 
 Откройте панель администратора Medusa и перейдите в раздел **Настройки** -> **Фиды** в разделе Расширения — здесь доступен интерфейс плагина.
-
-export const metadata = {
-  title: "Использование",
-  description: "Откройте панель администратора Medusa и перейдите в раздел **Настройки** -> **Фиды** в разделе Расширения — здесь доступен интерфейс плагина"
-}
-
 
 ![Страница списка фидов](https://github.com/user-attachments/assets/7998358a-a0ed-4f46-8927-0db3189aea31)
 
