--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "YooKassa Payments for Medusa",
+  description: "A Medusa plugin that provides YooKassa payments."
+}
+
 # YooKassa Payments for Medusa
 
 A Medusa plugin that provides YooKassa payments.
-
-export const metadata = {
-  title: "YooKassa Payments for Medusa",
-  description: "A Medusa plugin that provides YooKassa payments"
-}
-
 
 ## Features
 
