--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/en.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Getting Started with YooKassa Payment",
+  description: "Learn how to install and configure the YooKassa payment provider for Medusa."
+}
+
 # Getting Started with YooKassa Payment
 
 In this document, you'll learn how to install and configure the YooKassa payment provider for Medusa.
-
-export const metadata = {
-  title: "Getting Started with YooKassa Payment",
-  description: "In this document, you'll learn how to install and configure the YooKassa payment provider for Medusa"
-}
-
 
 ## Requirements
 
