--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/ru.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Быстрый старт с подключением ЮKassa",
+  description: "Узнайте, как установить и настроить платежный провайдер ЮKassa для Medusa."
+}
+
 # Быстрый старт с подключением ЮKassa
 
 В этом документе вы узнаете, как установить и настроить платежный провайдер ЮKassa для Medusa.
-
-export const metadata = {
-  title: "Быстрый старт с подключением ЮKassa",
-  description: "В этом документе вы узнаете, как установить и настроить платежный провайдер ЮKassa для Medusa"
-}
-
 
 ## Требования
 
