--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Платежи ЮKassa для Medusa",
+  description: "Плагин Medusa для приёма платежей через ЮKassa."
+}
+
 # Платежи ЮKassa для Medusa
 
 Плагин Medusa для приёма платежей через ЮKassa.
-
-export const metadata = {
-  title: "Платежи ЮKassa для Medusa",
-  description: "Плагин Medusa для приёма платежей через ЮKassa"
-}
-
 
 ## Возможности
 
