--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/en.mdx
@@ -1,6 +1,6 @@
 export const metadata = {
 	title: "Yandex Market YML Feed Generator for Medusa",
-	description: "A Medusa plugin that generates a product feed in YML (Yandex Market Language) format"
+	description: "A Medusa plugin that generates a product feed in YML (Yandex Market Language) format."
 }
 
 # {metadata.title}
