--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/en.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Getting Started with Yandex YML Feed Generator",
+  description: "In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa."
+}
+
 # Getting Started with Yandex YML Feed Generator
 
 In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa.
-
-export const metadata = {
-  title: "Getting Started with Yandex YML Feed Generator",
-  description: "In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa"
-}
-
 
 ## Prerequisites
 
