--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
@@ -1,12 +1,11 @@
+export const metadata = {
+  title: "Интеграция ЮKassa с витриной магазина (Storefront)",
+  description: "Узнайте, как интегрировать платежный провайдер ЮKassa в витрину магазина на Next.js, построенную с использованием Medusa."
+}
+
 # Интеграция ЮKassa с витриной магазина (Storefront)
 
 Для интеграции платёжного провайдера ЮKassa с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
-
-export const metadata = {
-  title: "Интеграция ЮKassa с витриной магазина (Storefront)",
-  description: "Для интеграции платёжного провайдера ЮKassa с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты"
-}
-
 
 Когда пользователь выбирает ЮKassa, витрина должна вызвать метод `initiatePayment` с нужными параметрами. Это создаст платёжную сессию через API ЮKassa и подготовит покупателя к перенаправлению. После этого кнопка *Place Order* должна отправить пользователя на страницу оплаты ЮKassa, где он сможет выбрать предпочтительный способ оплаты.
 
