--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "Yandex Market YML Feed Generator for Medusa",
-	description: "A Medusa plugin that generates a product feed in YML (Yandex Market Language) format."
-}
+---
+title: "Yandex Market YML Feed Generator for Medusa"
+description: "A Medusa plugin that generates a product feed in YML (Yandex Market Language) format."
+---
 
-# {metadata.title}
+# {frontmatter.title}
 
 A Medusa plugin that generates a product feed in <a href="https://yandex.com/support/direct/feeds/requirements-yml.html">YML (Yandex Market Language)</a> format.
 
