fix: finished search fixes

--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "1C:Enterprise Integration with Medusa",
-	description: "Integration plugin for data exchange between Medusa and 1C:Enterprise ERP."
-}
+---
+title: "1C:Enterprise Integration with Medusa"
+description: "Integration plugin for data exchange between Medusa and 1C:Enterprise ERP."
+---
 
-# 1C:Enterprise Integration with Medusa
+# {frontmatter.title}
 
 Integration plugin for data exchange between Medusa and 1C:Enterprise ERP.
 
