--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/getting-started/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "Getting Started with 1C:Enterprise ERP",
-	description: "In this document, you'll learn how to install and configure the 1C:Enterprise integration plugin for Medusa."
-}
+---
+title: "Getting Started with 1C:Enterprise ERP"
+description: "In this document, you'll learn how to install and configure the 1C:Enterprise integration plugin for Medusa."
+---
 
-# Getting Started with 1C:Enterprise ERP
+# {frontmatter.title}
 
 In this document, you'll learn how to install and configure the 1C:Enterprise integration plugin for Medusa.
 
