--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/1c-enterprise/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "Интеграция 1С:Предприятие с Medusa",
-	description: "Плагин интеграции для обмена данными между Medusa и ERP 1С:Предприятие"
-}
+---
+title: "Интеграция 1С:Предприятие с Medusa"
+description: "Плагин интеграции для обмена данными между Medusa и ERP 1С:Предприятие"
+---
 
-# Интеграция 1С:Предприятие с Medusa
+# {frontmatter.title}
 
 Плагин интеграции для обмена данными между Medusa и ERP 1С:Предприятие
 
