--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/getting-started/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Getting Started with Robokassa Payment",
-  description: "In this document, you'll learn how to install and configure the Robokassa payment provider for Medusa"
-}
+---
+title: "Getting Started with Robokassa Payment"
+description: "In this document, you'll learn how to install and configure the Robokassa payment provider for Medusa"
+---
 
-# Getting Started with Robokassa Payment
+# {frontmatter.title}
 
 In this document, you'll learn how to install and configure the Robokassa payment provider for Medusa.
 
