--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "Платежи Робокасса для Medusa",
-	description: "Плагин Medusa для приёма платежей через Робокасса."
-}
+---
+title: "Платежи Робокасса для Medusa"
+description: "Плагин Medusa для приёма платежей через Робокасса."
+---
 
-# Платежи Робокасса для Medusa
+# {frontmatter.title}
 
 Плагин Medusa для приёма платежей через Робокасса.
 
