--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/storefront-integration/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Integrate Robokassa Payment to Storefront",
-  description: "Learn how to integrate the Robokassa payment provider into a Next.js storefront for Medusa."
-}
+---
+title: "Integrate Robokassa Payment to Storefront"
+description: "Learn how to integrate the Robokassa payment provider into a Next.js storefront for Medusa."
+---
 
-# Integrate Robokassa Payment to Storefront
+# {frontmatter.title}
 
 To integrate the Robokassa payment provider in a Next.js storefront, start by adding the required UI components. So, the provider is displayed on the checkout page alongside other available payment methods.
 
