--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "T-Kassa Payments for Medusa",
-  description: "A Medusa plugin that provides T-Kassa payments"
-}
+---
+title: "T-Kassa Payments for Medusa"
+description: "A Medusa plugin that provides T-Kassa payments"
+---
 
-# T-Kassa Payments for Medusa
+# {frontmatter.title}
 
 A Medusa plugin that provides T-Kassa payments.
 
