--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/storefront-integration/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Интеграция Т-Касса с витриной магазина (Storefront)",
-  description: "Узнайте, как интегрировать платёжный провайдер Т-Касса в витрину магазина на Next.js для Medusa."
-}
+---
+title: "Интеграция Т-Касса с витриной магазина (Storefront)"
+description: "Узнайте, как интегрировать платёжный провайдер Т-Касса в витрину магазина на Next.js для Medusa."
+---
 
-# Интеграция Т-Касса с витриной магазина (Storefront)
+# {frontmatter.title}
 
 Для интеграции платёжного провайдера Т-Касса с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
 
