--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Начало работы с генератором YML-фидов Яндекса",
-  description: "В этой документации вы узнаете, как установить и настроить генератор YML-фидов в формате Яндекс Маркета для Medusa."
-}
+---
+title: "Начало работы с генератором YML-фидов Яндекса"
+description: "В этой документации вы узнаете, как установить и настроить генератор YML-фидов в формате Яндекс Маркета для Medusa."
+---
 
-# Начало работы с генератором YML-фидов Яндекса
+# {frontmatter.title}
 
 В этой документации вы узнаете, как установить и настроить генератор YML-фидов в формате Яндекс Маркета для Medusa.
 
