--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "Генератор YML-фида в формате Яндекс Маркет для Medusa",
-	description: "Плагин Medusa, который генерирует фид товаров в формате YML (Yandex Market Language)."
-}
+---
+title: "Генератор YML-фида в формате Яндекс Маркет для Medusa"
+description: "Плагин Medusa, который генерирует фид товаров в формате YML (Yandex Market Language)."
+---
 
-# {metadata.title}
+# {frontmatter.title}
 
 Плагин Medusa, который генерирует фид товаров в формате <a href="https://yandex.com/support/direct/feeds/requirements-yml.html">YML (Yandex Market Language)</a>.
 
