--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Testing Yandex Market YML Feed Generator",
-  description: "Running tests for the Yandex Market YML Feed Generator"
-}
+---
+title: "Testing Yandex Market YML Feed Generator"
+description: "Running tests for the Yandex Market YML Feed Generator"
+---
 
-# Testing Yandex Market YML Feed Generator
+# {frontmatter.title}
 
 To run tests, navigate to the [`examples/feed-yandex/medusa`](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex/medusa) directory:
 
