--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/testing/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Тестирование Яндекс Маркет YML-фида для Medusa",
-  description: "Запуск тестов для генератора YML-фида Яндекс Маркет"
-}
+---
+title: "Тестирование Яндекс Маркет YML-фида для Medusa"
+description: "Запуск тестов для генератора YML-фида Яндекс Маркет"
+---
 
-# Тестирование
+# {frontmatter.title}
 
 Для запуска тестов перейдите в каталог [`examples/feed-yandex/medusa`](https://github.com/gorgojs/medusa-plugins/tree/main/examples/feed-yandex/medusa):
 
