--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Usage",
-  description: "Use the Medusa Admin dashboard to manage Yandex Market YML feeds"
-}
+---
+title: "Usage"
+description: "Use the Medusa Admin dashboard to manage Yandex Market YML feeds"
+---
 
-# Usage
+# {frontmatter.title}
 
 Open the Medusa Admin dashboard and navigate to **Settings** -> **Feeds** section in the Extensions — this is where the plugin interface is available.
 
