--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/usage/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Использование",
-  description: "Используйте панель администратора Medusa для управления Yandex Market YML-фидами"
-}
+---
+title: "Использование"
+description: "Используйте панель администратора Medusa для управления Yandex Market YML-фидами"
+---
 
-# Использование
+# {frontmatter.title}
 
 Откройте панель администратора Medusa и перейдите в раздел **Настройки** -> **Фиды** в разделе Расширения — здесь доступен интерфейс плагина.
 
