--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Платежи ЮKassa для Medusa",
-  description: "Плагин Medusa для приёма платежей через ЮKassa."
-}
+---
+title: "Платежи ЮKassa для Medusa"
+description: "Плагин Medusa для приёма платежей через ЮKassa."
+---
 
-# Платежи ЮKassa для Medusa
+# {frontmatter.title}
 
 Плагин Medusa для приёма платежей через ЮKassa.
 
