--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Integrate YooKassa Payment to Storefront",
-  description: "Learn how to integrate the YooKassa payment provider into a Next.js storefront built with Medusa."
-}
+---
+title: "Integrate YooKassa Payment to Storefront"
+description: "Learn how to integrate the YooKassa payment provider into a Next.js storefront built with Medusa."
+---
 
-# Integrate YooKassa Payment to Storefront
+# {frontmatter.title}
 
 To integrate the YooKassa payment provider in a Next.js storefront, start by adding the required UI components. So, the provider is displayed on the checkout page alongside other available payment methods.
 
