--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/storefront-integration/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Интеграция ЮKassa с витриной магазина (Storefront)",
-  description: "Узнайте, как интегрировать платежный провайдер ЮKassa в витрину магазина на Next.js, построенную с использованием Medusa."
-}
+---
+title: "Интеграция ЮKassa с витриной магазина (Storefront)"
+description: "Узнайте, как интегрировать платежный провайдер ЮKassa в витрину магазина на Next.js, построенную с использованием Medusa."
+---
 
-# Интеграция ЮKassa с витриной магазина (Storefront)
+# {frontmatter.title}
 
 Для интеграции платёжного провайдера ЮKassa с storefront на Next.js начните с добавления необходимых UI-компонентов. Таким образом провайдер будет отображаться на странице оформления заказа наряду с другими доступными методами оплаты.
 
