--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-	title: "Robokassa Payments for Medusa",
-	description: "A Medusa plugin that provides Robokassa payments."
-}
+---
+title: "Robokassa Payments for Medusa"
+description: "A Medusa plugin that provides Robokassa payments."
+---
 
-# Robokassa Payments for Medusa
+# {frontmatter.title}
 
 A Medusa plugin that provides Robokassa payments.
 
