--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/robokassa/getting-started/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Быстрый старт с подключением Робокасса",
-  description: "В этом документе вы узнаете, как установить и настроить платежный провайдер Робокасса для Medusa"
-}
+---
+title: "Быстрый старт с подключением Робокасса"
+description: "В этом документе вы узнаете, как установить и настроить платежный провайдер Робокасса для Medusa"
+---
 
-# Быстрый старт с подключением Робокасса
+# {frontmatter.title}
 
 В этом документе вы узнаете, как установить и настроить платежный провайдер Робокасса для Medusa.
 
