--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/getting-started/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Getting Started with T-Kassa Payment",
-  description: "In this document, you’ll learn how to install and configure the T-Kassa payment provider for Medusa"
-}
+---
+title: "Getting Started with T-Kassa Payment"
+description: "In this document, you’ll learn how to install and configure the T-Kassa payment provider for Medusa"
+---
 
-# Getting Started with T-Kassa Payment
+# {frontmatter.title}
 
 In this document, you’ll learn how to install and configure the T-Kassa payment provider for Medusa.
 
@@ -47,7 +47,7 @@ module.exports = defineConfig({
               taxItemDefault: "none",
               taxShippingDefault: "none"
             },
-          }   
+          }
         ]
       }
     }
