--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/t-kassa/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Платежи Т-Касса для Medusa",
-  description: "Плагин Medusa для приёма платежей через Т-Касса"
-}
+---
+title: "Платежи Т-Касса для Medusa"
+description: "Плагин Medusa для приёма платежей через Т-Касса"
+---
 
-# Платежи Т-Касса для Medusa
+# {frontmatter.title}
 
 Плагин Medusa для приёма платежей через Т-Касса.
 
