--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yandex-yml-feed/getting-started/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Getting Started with Yandex YML Feed Generator",
-  description: "In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa."
-}
+---
+title: "Getting Started with Yandex YML Feed Generator"
+description: "In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa."
+---
 
-# Getting Started with Yandex YML Feed Generator
+# {frontmatter.title}
 
 In this document, you'll learn how to install and configure the Yandex Market YML Feed Generator for Medusa.
 
