--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "YooKassa Payments for Medusa",
-  description: "A Medusa plugin that provides YooKassa payments."
-}
+---
+title: "YooKassa Payments for Medusa"
+description: "A Medusa plugin that provides YooKassa payments."
+---
 
-# YooKassa Payments for Medusa
+# {frontmatter.title}
 
 A Medusa plugin that provides YooKassa payments.
 
