--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/en.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/en.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Getting Started with YooKassa Payment",
-  description: "Learn how to install and configure the YooKassa payment provider for Medusa."
-}
+---
+title: "Getting Started with YooKassa Payment"
+description: "Learn how to install and configure the YooKassa payment provider for Medusa."
+---
 
-# Getting Started with YooKassa Payment
+# {frontmatter.title}
 
 In this document, you'll learn how to install and configure the YooKassa payment provider for Medusa.
 
