--- a/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/medusa-plugins/yookassa/getting-started/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "Быстрый старт с подключением ЮKassa",
-  description: "Узнайте, как установить и настроить платежный провайдер ЮKassa для Medusa."
-}
+---
+title: "Быстрый старт с подключением ЮKassa"
+description: "Узнайте, как установить и настроить платежный провайдер ЮKassa для Medusa."
+---
 
-# Быстрый старт с подключением ЮKassa
+# {frontmatter.title}
 
 В этом документе вы узнаете, как установить и настроить платежный провайдер ЮKassa для Medusa.
 
