--- a/www/docs/src/app/[locale]/(docs)/tools/create-medusa-plugin/ru.mdx
+++ b/www/docs/src/app/[locale]/(docs)/tools/create-medusa-plugin/ru.mdx
@@ -1,9 +1,9 @@
-export const metadata = {
-  title: "create-medusa-plugin",
-  description: "A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure"
-}
+---
+title: "create-medusa-plugin"
+description: "A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure"
+---
 
-# create-medusa-plugin
+# {frontmatter.title}
 
 A CLI tool to quickly scaffold a Medusa plugin and example projects in a ready-to-develop monorepo structure.
 
